Giang commit update API02
